<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"  
  android:layout_height="wrap_content"  
  android:padding="5dp"  
  android:background="#cccccc"
   > 
   
  <TextView      
      android:id="@+id/txtTitulo"      
      android:layout_width="fill_parent"      
      android:layout_height="wrap_content"        
      android:text="@string/titulo"      
      android:textSize="20sp"          
      android:textColor="#333333"      
      android:paddingLeft="5dp"    />    
  <TextView      
      android:id="@+id/txtEditora"      
      android:layout_width="wrap_content"      
      android:layout_height="wrap_content"      
      android:layout_below="@+id/txtTitulo"      
      android:text="@string/editora"      
      android:textColor="#333333"      
      android:paddingLeft="5dp"   />    
  <TextView      
      android:id="@+id/txtISBN"      
      android:layout_width="wrap_content"      
      android:layout_height="wrap_content"      
      android:layout_below="@+id/txtTitulo"      
      android:layout_alignParentRight="true"      
      android:text="@string/isbn"      
      android:textColor="#333333"  />  
 </RelativeLayout>


